Re-arrange layout, so that the map is part of the layout and not hidden behind controls Also fix link to www.graphhopper.com

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,60 +5,95 @@
     margin: 0;
     display: grid;
     grid-template-columns: 25rem auto auto;
-    grid-template-rows: 100%;
+    grid-template-rows: auto auto auto 1fr;
     justify-content: space-between;
+    overflow: auto;
 }
 .map {
     grid-column: 1 / span 3;
-    grid-row: 1 / span 1;
+    grid-row: 1 / span 4;
 }
 
 .sidebar {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
+    margin: 0.5rem 0.5rem 0 0.5rem;
+    border-radius: 0.5rem 0.5rem 0 0 ;
+    background-color: white;
+    z-index: 3;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+}
 
-    background-color: transparent;
-    z-index: 500;
-    pointer-events: none; /* let the user click on the map where the sidebar is transparent */
+.routingResult {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+    z-index: 3;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    margin: 0 0.5rem;
+    overflow: auto;
 }
 
 .mapOptions {
     grid-column: 3 / span 1;
-    grid-row: 1 / span 1;
+    grid-row: 1 / span 2;
     background-color: transparent;
-    z-index: 400;
+    z-index: 3;
     pointer-events: none; /* let the user click on the map where the sidebar is transparent */
+}
+
+.poweredBy {
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
+    z-index: 3;
+    background-color: white;
+    margin: 0 0.5rem 0.5rem;
+    border-radius: 0 0 0.5rem 0.5rem;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .mapOptionsContent {
     display: flex;
     margin: 0.5rem;
-
-
     pointer-events: all; /* we want all the content to behave normally*/
 }
 
 @media (max-width: 44rem) {
     .appWrapper {
         grid-template-columns: 1fr auto;
-        grid-template-rows: 100%;
+        grid-template-rows: auto 0 1fr auto auto;
     }
 
     .map {
-        grid-row: 1 / span 1;
+        grid-row: 1 / span 3;
     }
 
     .sidebar {
         grid-row: 1 / span 1;
         grid-column: 1 / span 2;
+        margin: 0;
+        border-radius: 0;
     }
 
     .mapOptions {
-        grid-row: 1 / span 1;
+        grid-row: 2 / span 1;
         grid-column: 2 / span 1;
-
-        /* this is still hacky. but leave it like this for now */
-        align-self: end;
-        margin-bottom: 7.5rem;
     }
+
+    .routingResult {
+        grid-row: 4 / span 1;
+        grid-column: 1 / span 2;
+        margin: 0;
+        z-index: 4;
+    }
+
+    .poweredBy {
+        grid-row: 5 / span 1;
+        grid-column: 1 / span 2;
+        margin: 0;
+        border-radius: 0;
+        z-index: 4;
+    }
+
+
 }
