--- a/src/map/MapOptions.modules.css
+++ b/src/map/MapOptions.modules.css
@@ -3,7 +3,7 @@
     background-color: white;
     border-radius: 0.5rem;
 
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .options {
